@@ -58,6 +58,8 @@ VERSION 1.2.0 (Jan ?? ??:?? 2005)
 - Now only show command invocation for logger on verbose level 4
 - Added rsync cleanup after native_cp_al() to preserve special files
 - Removed warning messages from native_cp_al() about special files
+- Modified error printing so full run string is displayed once at the top
+  of a list of error messages
 
 VERSION 1.1.6 (Jul 05 16:35 2004)
 ------------------------------------------------------------------------------
